# incendiary-iguana

./: .conform.yaml  .editorconfig  .gitignore  .golangci.yml  BUILD  Dockerfile  Makefile  PROJECT  README.md  WORKSPACE  go.mod  go.sum  int-tm.yaml  kube  main.go  rg_sb_cache.yaml  sp.json  ssh
.github/: auto-merge.yaml  auto-merge.yml  main.workflow  semantic.yml
.github/actions/: README.md
.github/actions/cli-test/: action.yml
.github/actions/conform/: Dockerfile
.github/actions/test/: Dockerfile
.github/workflows/: go.yml  main.yml
.pipelines/: pipeline.yaml
api/v1alpha1/: BUILD.bazel  dockercfg_types.go  groupversion_info.go  identity_types.go  keyvault_types.go  loadbalancer_types.go  networkinterface_types.go  publicip_types.go  redis_types.go  redissecret_types.go  resourcegroup_types.go  secret_types.go  secretbundle_types.go  securitygroup_types.go  servicebus_types.go  servicebussecret_types.go  sqlfirewallrule_types.go  sqlserver_types.go  storageaccount_types.go  storagekey_types.go  subnet_types.go  tlssecret_types.go  trafficmanager_types.go  virtualnetwork_types.go  vm_types.go  vmscaleset_types.go  zz_generated.deepcopy.go
cmd/: README.md  ensure.go  main.go  root.go
cmd/ensure/: ensure.go  ensure_test.go
cmd/ensure/testdata/: group.yaml  manifest.yaml
config/crd/: kustomization.yaml
config/crd/bases/: azure.alexeldeib.xyz_dockerconfigs.yaml  azure.alexeldeib.xyz_identities.yaml  azure.alexeldeib.xyz_keyvaults.yaml  azure.alexeldeib.xyz_loadbalancers.yaml  azure.alexeldeib.xyz_networkinterfaces.yaml  azure.alexeldeib.xyz_netwworkinterfaces.yaml  azure.alexeldeib.xyz_publicip.yaml  azure.alexeldeib.xyz_publicips.yaml  azure.alexeldeib.xyz_redis.yaml  azure.alexeldeib.xyz_rediskeys.yaml  azure.alexeldeib.xyz_resourcegroups.yaml  azure.alexeldeib.xyz_secretbundles.yaml  azure.alexeldeib.xyz_secrets.yaml  azure.alexeldeib.xyz_securitygroups.yaml  azure.alexeldeib.xyz_servicebus.yaml  azure.alexeldeib.xyz_servicebuskeys.yaml  azure.alexeldeib.xyz_servicebussecrets.yaml  azure.alexeldeib.xyz_sqlfirewalls.yaml  azure.alexeldeib.xyz_sqlservers.yaml  azure.alexeldeib.xyz_storageaccounts.yaml  azure.alexeldeib.xyz_storagekeys.yaml  azure.alexeldeib.xyz_subnets.yaml  azure.alexeldeib.xyz_tlssecrets.yaml  azure.alexeldeib.xyz_trafficmanagers.yaml  azure.alexeldeib.xyz_virtualnetworks.yaml  azure.alexeldeib.xyz_vms.yaml  azure.alexeldeib.xyz_vmscaleset.yaml
config/crd/patches/: cainjection_in_keyvaults.yaml  cainjection_in_networkinterfaces.yaml  cainjection_in_publicips.yaml  cainjection_in_resourcegroups.yaml  cainjection_in_secretbundles.yaml  cainjection_in_secrets.yaml  cainjection_in_securitygroups.yaml  cainjection_in_subnets.yaml  cainjection_in_trafficmanagers.yaml  cainjection_in_virtualnetworks.yaml  webhook_in_keyvaults.yaml  webhook_in_networkinterfaces.yaml  webhook_in_publicips.yaml  webhook_in_resourcegroups.yaml  webhook_in_secretbundles.yaml  webhook_in_secrets.yaml  webhook_in_securitygroups.yaml  webhook_in_subnets.yaml  webhook_in_trafficmanagers.yaml  webhook_in_virtualnetworks.yaml
config/default/: kustomization.yaml
config/rbac/: role.yaml
config/samples/: azure_v1alpha1_keyvault.yaml  azure_v1alpha1_loadbalancer.yaml  azure_v1alpha1_networkinterface.yaml  azure_v1alpha1_publicip.yaml  azure_v1alpha1_redis.yaml  azure_v1alpha1_rediskey.yaml  azure_v1alpha1_resourcegroup.yaml  azure_v1alpha1_secret.yaml  azure_v1alpha1_secretbundle.yaml  azure_v1alpha1_securitygroup.yaml  azure_v1alpha1_servicebus.yaml  azure_v1alpha1_servicebuskey.yaml  azure_v1alpha1_sqlserver.yaml  azure_v1alpha1_subnet.yaml  azure_v1alpha1_tlssecret.yaml  azure_v1alpha1_trafficmanager.yaml  azure_v1alpha1_virtualnetwork.yaml  azure_v1alpha1_vm.yaml  draftsecrets.yaml
controllers/: BUILD.bazel  async_controller.go  controller.go  helpers.go  identity_controller.go  keyvault_controller.go  networkinterface_controller.go  publicip_controller.go  redis_controller.go  redissecret_controller.go  resourcegroup_controller.go  resourcegroup_controller_test.go  sbnamespace_controller.go  sbsecret_controller.go  secret_controller.go  secretbundle_controller.go  securitygroup_controller.go  sqlfirewallrule_controller.go  sqlserver_controller.go  sqlserver_controller_test.go  storagekey_controller.go  subnet_controller.go  suite_test.go  sync_controller.go  tlssecret_controller.go  trafficmanager_controller.go  virtualnetwork_controller.go  vm_controller.go  vmscaleset_controller.go
docs/: resourcegroup_controller.md
hack/: boilerplate.go.txt
pkg/authorizer/: authorizer.go
pkg/azure/redis/: controller.go  reconcile_cache.go  reconcile_keys.go  service.go
pkg/azure/resourcegroups/: controller.go  reconcile.go  service.go
pkg/azure/secrets/: controller.go  reconcile_bundle.go  reconcile_docker.go  reconcile_one.go  reconcile_tls.go  service.go
pkg/clients/: clients.go
pkg/clients/keyvaults/: BUILD.bazel  keyvaults.go  spec.go
pkg/clients/resourcegroups/: BUILD.bazel  azure.go  resourcegroups.go  spec.go
pkg/clients/resources/: BUILD.bazel  resources.go
pkg/clients/secrets/: BUILD.bazel  secrets.go
pkg/clients/securitygroups/: BUILD.bazel  securitygroups.go
pkg/config/: BUILD.bazel  config.go  context.go
pkg/constants/: constants.go
pkg/convert/: convert.go
pkg/decoder/: decoder.go
pkg/finalizer/: finalizer.go
pkg/mocks/mock_config/: BUILD.bazel  mock_config.go  zz_generated_mock.go
pkg/mocks/mock_logr/: BUILD.bazel  mock_logr.go  zz_generated_mock.go
pkg/mocks/mock_resourcegroup/: BUILD.bazel  mock_resourcegroup.go  zz_generated_mock.go
pkg/randstring/: randstring.go
pkg/reconcilers/: async.go  dockercfg.go  group.go  redis.go  rediskey.go  secret.go  secretbundle.go  secrets_test.go  servicebus.go  servicebuskey.go  storagekey.go  sync.go  trafficmanager.go
pkg/services/: group.go  group_fake.go  redis.go  secret.go  servicebus.go  storage.go  trafficmanager.go
pkg/stringslice/: stringslice.go
pkg/stringutil/: stringutil.go
pkg/tlsutil/: tlsutil.go
pkg/yamlutil/: yamlutil.go
test/: Dockerfile  action.yml
(+85 files in other folders)
