load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "groupversion_info.go",
        "keyvault_types.go",
        "resourcegroup_types.go",
        "secret_types.go",
        "secretbundle_types.go",
        "securitygroup_types.go",
        "subnet_types.go",
        "virtualnetwork_types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/alexeldeib/incendiary-iguana/api/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_azure_azure_sdk_for_go//services/network/mgmt/2019-04-01/network:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
    ],
)
