load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "context.go",
    ],
    importpath = "github.com/alexeldeib/incendiary-iguana/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_azure_go_autorest_autorest//:go_default_library",
        "@com_github_azure_go_autorest_autorest//azure:go_default_library",
        "@com_github_azure_go_autorest_autorest_azure_auth//:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)
