load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["resources.go"],
    importpath = "github.com/alexeldeib/incendiary-iguana/pkg/clients/resources",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/resources/mgmt/2019-05-01/resources:go_default_library",
        "@com_github_azure_go_autorest_autorest//:go_default_library",
        "@com_github_azure_go_autorest_autorest//azure:go_default_library",
    ],
)
