load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["secrets.go"],
    importpath = "github.com/alexeldeib/incendiary-iguana/pkg/clients/secrets",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1:go_default_library",
        "//pkg/config:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/keyvault/v7.0/keyvault:go_default_library",
        "@com_github_azure_go_autorest_autorest//azure:go_default_library",
    ],
)
