load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["securitygroups.go"],
    importpath = "github.com/alexeldeib/incendiary-iguana/pkg/clients/securitygroups",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1:go_default_library",
        "//pkg/config:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/network/mgmt/2019-04-01/network:go_default_library",
    ],
)
