load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mock_logr.go",
        "zz_generated_mock.go",
    ],
    importpath = "github.com/alexeldeib/incendiary-iguana/pkg/mocks/mock_logr",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
