load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mock_resourcegroup.go",
        "zz_generated_mock.go",
    ],
    importpath = "github.com/alexeldeib/incendiary-iguana/pkg/mocks/mock_resourcegroup",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/resources/mgmt/2019-05-01/resources:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
